# styleagent-runner

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  host-integration.yml  host-runner-readiness.yml  sbom.yml
docs/: Implementation-Plan.md  LLD.md
docs/ADRs/: ADR-001-runner-role.md  ADR-002-transport.md  ADR-003-job-model.md
runner/: __init__.py  api.py  cli.py  config.py  doctor.py  http.py  jobs.py  poller.py  types.py
runner/captureone/: __init__.py  compile.py  host.py
tests/: test_api.py  test_cli.py  test_config.py  test_doctor.py  test_http.py  test_jobs.py  test_poller.py  test_types.py
tests/integration/: test_host_local_integration.py
