[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "styleagent-runner"
version = "0.1.0"
description = "StyleAgent thin runner CLI (MVP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[project.scripts]
styleagent-runner = "runner.cli:main"

[tool.ruff]
line-length = 100
